<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/formTicketFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meudia.form.FormMeuDiaFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ImageView
        android:id="@+id/imageViewBackFormTicket"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imageViewBackFormTicketDescricao"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/imageViewAddMeuDiaImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/imageViewAddMeuDiaImage"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLabelAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/textLabelAddImage"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAddMeuDiaImage" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveMeuDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/fabSaveMeuDiaDescricao"
        android:src="@android:drawable/ic_menu_save"
        app:backgroundTint="#827717"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHoraAddTicket" />

    <Spinner
        android:id="@+id/tipoMeuDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabelCategoriaAddMeuDia" />

    <TextView
        android:id="@+id/textLabelCategoriaAddMeuDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/textLabelCategoriaAddMeuDia"
        android:textColor="#020202"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLocalAddMeuDia" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLocalAddMeuDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTituloAddMeuDia">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMsgAddMeuDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextMsgAddMeuDia"
            android:inputType="textPostalAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTituloAddMeuDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabelAddImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTituloAddMeuDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextTituloAddMeuDia"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDataAddMeuDia"
        android:layout_width="139dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoMeuDia">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDataAddMeuDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextDataAddMeuDia"
            android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutHoraAddTicket"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoMeuDia">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextHoraAddMeuDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextHoraAddMeuDia"
            android:inputType="time"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>