<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cadastroFrameLayot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.cadastro.CadastroFragment" >

    <ImageView
        android:id="@+id/imageViewBackCadastro"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/BtnvoltarCadastro"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textLabelCadastro"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="72dp"
        android:text="@string/LabelTelaDeCadastro"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/BtnCadastrar"
        app:iconTint="#C0CA33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmarSenhaCadastro" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNomeCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="#827717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabelCadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintCadastroNome"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSobrenomeCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="#827717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNomeCadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSobrenomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LblCadastroSobrenome"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmailCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="#827717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSobrenomeCadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintCadastroEmail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="#827717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailCadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintCadastroSenha"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutConfirmarSenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="#827717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSenhaCadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConfirmarSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintCadastroConfirmarSenha"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>