<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updateUsuarioFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.update.UpdateUserFragment" >


    <ImageView
        android:id="@+id/imageViewBackUpdateUsuario"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imageViewBackUpdateUsuarioDesccricao"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textLabelAtualizacaoUsuário"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/textLabelAtualizacaoUsuário"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNomeUpdateUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabelAtualizacaoUsuário">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNomeAtualizacaoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/htineditTextNomeAtualizacaoUsuario"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSobrenomeAtualizacaoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNomeUpdateUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSobrenomeAtualizacaoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextSobrenomeAtualizacaoUsuario"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveAtualizacaoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/fabSaveAtualizacaoUsuarioDescricao"
        android:src="@android:drawable/ic_menu_save"
        app:backgroundTint="#827717"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>